--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
+    "bootstrap": "3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -21,7 +22,7 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
-    "styled-components": "^6.1.1",
+    "styled-components": "^5.3.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -48,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.32"
   }
 }
