--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -18,5 +18,6 @@ jobs:
       - name: Install Dependencies and Build
         run: |
           npm install
+          npm audit fix 
           npm run build
           npm start
