--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -18,5 +18,9 @@ jobs:
       - name: Install Dependencies and Build
         run: |
           npm install
-          npm audit fix
-          npm run build
+      
+      - name: NPM audit
+        run: .github/scripts/npm-audit.sh
+      
+      - name: Build
+        run: npm run build
