--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -3,24 +3,19 @@ name: Password Manager CI
 on: pull_request
 
 jobs:
-  password-manager-ci:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+      - name: Container up
+        run: docker-compose up -d
 
-      - name: Install Dependencies and Build
-        run: |
-          npm install
-      
-      - name: NPM audit
-        run: .github/scripts/npm-audit.sh
-      
-      - name: Build
-        run: npm run build
+  deploy:
+    needs: [build]
+    runs-on: ubuntu-latest
+ 
+    steps:
+    - uses: actions/checkout@v3
