--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Container up
-        run: docker-compose up -d
+        run: docker-compose up
 
   deploy:
     needs: [build]
