--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -61,19 +61,19 @@ jobs:
             --failOnCVSS 7
             --enableRetired
       - name: Upload Test results
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@master
         with:
            name: Depcheck report
            path: ${{github.workspace}}/reports
 
-      # ZAP (290 estrelas)
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.12.0
-        with:
-          token: ${{ secrets.TOKEN_GIT }}
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://www.zaproxy.org'
-          rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-a'
+      # # ZAP (290 estrelas)
+      # - name: Checkout
+      #   uses: actions/checkout@v2
+      # - name: ZAP Scan
+      #   uses: zaproxy/action-baseline@v0.12.0
+      #   with:
+      #     token: ${{ secrets.TOKEN_GIT }}
+      #     docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+      #     target: 'https://www.zaproxy.org'
+      #     rules_file_name: '.zap/rules.tsv'
+      #     cmd_options: '-a'
