--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -53,7 +53,7 @@ jobs:
         uses: dependency-check/Dependency-Check_Action@main
         id: Depcheck
         with:
-          project: 'test'
+          project: 'tcc-password-manager'
           path: '.'
           format: 'HTML'
           out: 'reports' # this is the default, no need to specify unless you wish to override it
@@ -66,6 +66,8 @@ jobs:
            name: Depcheck report
            path: ${{github.workspace}}/reports
       
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Move Test Results
         run: mv ${{github.workspace}}/reports ${{github.workspace}}/${{github.event.repository.name}}/reports
 
