--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -13,6 +13,11 @@ jobs:
       - name: Container up
         run: docker-compose up -d
 
+      - name: Audit packages
+        run: npm audit --audit-level moderate
+        env:
+          CI: true
+
       # TruffleHog OSS (13k estrelas)
 
       # GoSec Security Checker (7k estrelas)
