--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -45,6 +45,12 @@ jobs:
       #     sca_access_control_url: ${{ secrets.SCA_ACCESS_CONTROL_URL }}
       #     sca_tenant: ${{  secrets.SCA_TENANT }}
       #     sca_username: ${{ secrets.SCA_USERNAME }}
+
+      - name: Config GitHub
+      run: |
+        cd scripts && yarn install && node release.js
+        git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
+        git config --global user.name "${{secrets.GIT_USER_NAME}}"
   
       # OWASP DEPENDENCY CHECK (63 estrelas)
       - name: Checkout
@@ -65,6 +71,15 @@ jobs:
         with:
            name: Depcheck report
            path: ${{github.event.repository.name}}/reports
+
+      - name: Save Results
+        git clone "https://x-access-token:${{secrets.API_TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
+        mkdir -p ${{secrets.NAME_REPO_GIT}}/reports
+        cp -R ${{github.event.repository.name}}/reports ${{secrets.NAME_REPO_GIT}}/reports
+        cd ${{secrets.NAME_REPO_GIT}}
+        git add .
+        git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
+        git push
       
       # - name: Checkout
       #   uses: actions/checkout@v2
