--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -75,25 +75,20 @@ jobs:
         run: |
           git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
           mkdir -p ${{secrets.NAME_REPO_GIT}}/reports
-          cp -R  ${{github.workspace}}/reports ${{secrets.NAME_REPO_GIT}}/reports
+          cp -R ${{github.workspace}}/reports ${{secrets.NAME_REPO_GIT}}/reports
           cd ${{secrets.NAME_REPO_GIT}}
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
           git push
-      
-      # - name: Checkout
-      #   uses: actions/checkout@v2
-      # - name: Move Test Results
-      #   run: mv ${{github.workspace}}/reports ${{github.workspace}}/${{github.event.repository.name}}/reports
-
-      # # ZAP (290 estrelas)
-      # - name: Checkout
-      #   uses: actions/checkout@v2
-      # - name: ZAP Scan
-      #   uses: zaproxy/action-baseline@v0.12.0
-      #   with:
-      #     token: ${{ secrets.TOKEN_GIT }}
-      #     docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-      #     target: 'https://www.zaproxy.org'
-      #     rules_file_name: '.zap/rules.tsv'
-      #     cmd_options: '-a'
+    
+      # ZAP (290 estrelas)
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: ZAP Scan
+        uses: zaproxy/action-baseline@v0.12.0
+        with:
+          token: ${{ secrets.TOKEN_GIT }}
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+          target: 'https://www.zaproxy.org'
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
