--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -51,6 +51,17 @@ jobs:
           git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
           git config --global user.name "${{secrets.GIT_USER_NAME}}"
   
+      # NPM AUDIT
+      - name: install dependencies
+        run: npm ci
+      - uses: oke-py/npm-audit-action@v2
+        with:
+          audit_level: low
+          create_issues: false
+          github_token: ${{ secrets.TOKEN_GIT }}
+          issue_labels: vulnerability
+
+
       # OWASP DEPENDENCY CHECK (63 estrelas)
       - name: Checkout
         uses: actions/checkout@v2
