--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -10,8 +10,8 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Container up
-        run: docker-compose up -d
+      # - name: Container up
+      #   run: docker-compose up -d
 
       # TruffleHog OSS (13k estrelas)
 
