6 fix: add uses

--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -53,7 +53,7 @@ jobs:
   
       # NPM AUDIT
       - name: run npm audit
-      - uses: oke-py/npm-audit-action@v2
+        uses: oke-py/npm-audit-action@v2
         with:
           audit_level: low
           create_issues: true
