--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -60,8 +60,8 @@ jobs:
       #     github_token: ${{ secrets.TOKEN_GIT }}
       #     issue_labels: vulnerability
 
-      # - name: install dependencies
-      #   run: npm ci
+      - name: install dependencies
+        run: npm ci
 
       # OWASP DEPENDENCY CHECK (63 estrelas)
       - name: Checkout
