#6 feat: testing owasp dependency check

--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -73,7 +73,7 @@ jobs:
         id: Depcheck
         with:
           project: 'tcc-password-manager'
-          path: '.'
+          path: '${{ github.workspace }}'
           format: 'HTML'
           out: 'reports'
           args: >
