--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -84,7 +84,7 @@ jobs:
         id: Depcheck
         with:
           project: 'tcc-password-manager'
-          path: '.'
+          path: './'
           format: 'HTML'
           out: 'reports'
           args: >
