--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -14,6 +14,25 @@ jobs:
       # - name: Container up
       #   run: docker-compose up -d
 
+      - name: Config GitHub
+        run: |
+          git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
+          git config --global user.name "${{secrets.GIT_USER_NAME}}"
+  
+      # NPM AUDIT
+      # - name: run npm audit
+      #   uses: oke-py/npm-audit-action@v2
+      #   with:
+      #     audit_level: low
+      #     create_issues: true
+      #     github_token: ${{ secrets.TOKEN_GIT }}
+      #     issue_labels: vulnerability
+
+      - name: install dependencies
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.TOKEN_GIT }}
+        run: npm ci
+
       # TruffleHog OSS (13k estrelas)
 
       # GoSec Security Checker (7k estrelas)
@@ -27,6 +46,7 @@ jobs:
       # Legitify Analize
 
       # SonarCloud Scan
+
 
       # CHECKMARX (46 estrelas)
       # - uses: actions/checkout@v2
@@ -46,25 +66,6 @@ jobs:
       #     sca_access_control_url: ${{ secrets.SCA_ACCESS_CONTROL_URL }}
       #     sca_tenant: ${{  secrets.SCA_TENANT }}
       #     sca_username: ${{ secrets.SCA_USERNAME }}
-
-      - name: Config GitHub
-        run: |
-          git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
-          git config --global user.name "${{secrets.GIT_USER_NAME}}"
-  
-      # NPM AUDIT
-      # - name: run npm audit
-      #   uses: oke-py/npm-audit-action@v2
-      #   with:
-      #     audit_level: low
-      #     create_issues: true
-      #     github_token: ${{ secrets.TOKEN_GIT }}
-      #     issue_labels: vulnerability
-
-      - name: install dependencies
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.TOKEN_GIT }}
-        run: npm ci
 
       # # OWASP DEPENDENCY CHECK (63 estrelas)
       # - name: Depcheck
@@ -94,6 +95,13 @@ jobs:
       #     git add .
       #     git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
       #     git push
+
+      # Gerar um "deploy" para a aplicação e adicionar a URL no target
+
+      - name: Iniciar aplicação
+      run: npm start
+      env:
+        PORT: ${{ github.job }} # Define a variável de ambiente PORT para a porta em que a aplicação será executada
     
       # ZAP (290 estrelas)
       - name: Checkout
@@ -104,9 +112,8 @@ jobs:
         with:
           token: ${{ secrets.TOKEN_GIT }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://www.zaproxy.org'
-          rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-a'
+          target: 'http://localhost:${{ env.PORT }}'
+          cmd_options: '-a' #indica ataque ativo, onde o zap tenta atuar como um atacante em busca de vulnerabilidades
 
       - name: Upload ZAP Scan report
         uses: actions/upload-artifact@v4
@@ -136,15 +143,18 @@ jobs:
         run: |
           echo "START_DATE=$(date +'%d-%m-%YT%H-%M-%S-%Z')" >> $GITHUB_ENV
           echo "START_TIMESTAMP=$(date +'%s')" >> $GITHUB_ENV
-          TMP_TARGET="https://blackfox-security.com"
+          TMP_TARGET="XXXXXXXXXX"
           echo "TARGET=$TMP_TARGET" >> $GITHUB_ENV
+
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Scan with sqlmap
         uses: thereisnotime/action-sqlmap@master
         with:
           url: ${{ env.TARGET }}
           additional_args: "--batch --crawl=2 --random-agent --forms --level=5 --risk=3"
+
       - name: Commit and push changes
         uses: EndBug/add-and-commit@v9
         with:
