--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -99,7 +99,7 @@ jobs:
       # Gerar um "deploy" para a aplicação e adicionar a URL no target
 
       - name: Iniciar aplicação
-        run: npm start
+        run: npm start &
         env:
           PORT: ${{ github.job }} # Define a variável de ambiente PORT para a porta em que a aplicação será executada
     
