--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -99,7 +99,9 @@ jobs:
       # Gerar um "deploy" para a aplicação e adicionar a URL no target
 
       - name: Iniciar aplicação
-        run: npm start &
+        run: |
+          npm start &
+          sleep 10 
         env:
           PORT: ${{ github.job }} # Define a variável de ambiente PORT para a porta em que a aplicação será executada
     
@@ -114,6 +116,8 @@ jobs:
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'http://localhost:${{ env.PORT }}'
           cmd_options: '-a' #indica ataque ativo, onde o zap tenta atuar como um atacante em busca de vulnerabilidades
+          volumes:
+            - "$(pwd):/zap/wrk"
 
       - name: Upload ZAP Scan report
         uses: actions/upload-artifact@v4
