--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -46,19 +46,19 @@ jobs:
       # Legitify Analize
 
       # SonarCloud Scan
-      - name: SonarCloud
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 
+      # - name: SonarCloud
+      #   uses: actions/checkout@v3
+      #   with:
+      #     fetch-depth: 0 
       
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN_GIT }} 
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      # - name: SonarCloud Scan
+      #   uses: SonarSource/sonarcloud-github-action@master
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.TOKEN_GIT }} 
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+      # - name: Checkout Repository
+      #   uses: actions/checkout@v2
 
 
       # CHECKMARX (46 estrelas)
@@ -108,9 +108,7 @@ jobs:
       #     git add .
       #     git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
       #     git push
-
-      # Gerar um "deploy" para a aplicação e adicionar a URL no target
-
+      
       - name: Iniciar aplicação
         run: |
           npm start &
@@ -118,6 +116,21 @@ jobs:
         env:
           PORT: ${{ github.job }} # Define a variável de ambiente PORT para a porta em que a aplicação será executada
     
+            # Gerar um "deploy" para a aplicação e adicionar a URL no target
+      - name: Install Vercel CLI
+      run: npm install --global vercel
+
+      - name: Pull Vercel Environment Information
+      run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+
+      - name: Build Project Artifacts
+      run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+
+      - name: Deploy Project Artifacts
+      run: |
+        vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+        export VERCEL_URL=$(vercel deploy --json | jq -r '.url')
+
       # ZAP (290 estrelas)
       - name: Checkout
         uses: actions/checkout@v2
@@ -127,7 +140,7 @@ jobs:
         with:
           token: ${{ secrets.TOKEN_GIT }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'http://localhost:${{ env.PORT }}'
+          target: '${{ env.VERCEL_URL }}'
           cmd_options: '-a' #indica ataque ativo, onde o zap tenta atuar como um atacante em busca de vulnerabilidades
 
       # - name: Save ZAP Scan Results
