#6 fix: fix syntax
Co-authored-by: nYCSTs <lucascandradex@protonmail.com>

--- a/.github/workflows/01-build.yaml
+++ b/.github/workflows/01-build.yaml
@@ -127,18 +127,15 @@ jobs:
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Deploy Project Artifacts
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+        run: |
+          vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+          VERCEL_URL=$(echo "$VERCEL_DEPLOY_OUTPUT" | awk '/> Preview ready/{print $NF}')
+          echo "VERCEL_URL=$VERCEL_URL" >> $GITHUB_ENV
 
       # ZAP (290 estrelas)
       - name: Checkout
         uses: actions/checkout@v2
       
-      - name: Set Vercel URL
-        run: |
-          VERCEL_DEPLOY_OUTPUT=$(vercel --json)
-          VERCEL_URL=$(echo "$VERCEL_DEPLOY_OUTPUT" | jq -r '.url')
-          echo "VERCEL_URL=$VERCEL_URL" >> $GITHUB_ENV
-
       - name: ZAP Scan
         uses: zaproxy/action-baseline@v0.12.0
         with:
