--- a/.github/workflows/01-build.yaml
+++ b/.github/workflows/01-build.yaml
@@ -92,6 +92,7 @@ jobs:
       #     args: >
       #       --failOnCVSS 7
       #       --enableRetired
+
       # - name: Upload Test results
       #   uses: actions/upload-artifact@v4
       #   with:
@@ -129,11 +130,6 @@ jobs:
       - name: Deploy Project Artifacts
         run: |
           vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
-          VERCEL_URL=$(echo "$VERCEL_DEPLOY_OUTPUT" | awk -F ' ' '/https:\/\/.*\.vercel\.app/{print $NF}')
-          echo "VERCEL_URL=$VERCEL_URL" >> $GITHUB_ENV
-
-      - name: See URL
-        run: echo "VERCEL_URL=$VERCEL_URL"
 
       # ZAP (290 estrelas)
       - name: Checkout
@@ -144,33 +140,15 @@ jobs:
         with:
           token: ${{ secrets.TOKEN_GIT }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: '${{ env.VERCEL_URL }}'
+          target: 'https://tcc-password-manager.vercel.app/'
           cmd_options: '-a' #indica ataque ativo, onde o zap tenta atuar como um atacante em busca de vulnerabilidades
-
-      # - name: Save ZAP Scan Results
-      #   run: |
-      #     cp -R ${{github.workspace}}/reports ${{secrets.NAME_REPO_GIT}}/reports
-      #     cd ${{secrets.NAME_REPO_GIT}}
-      #     git add .
-      #     git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
-      #     git push
-      
-      - name: Save Results
-        run: |
-          git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
-          mkdir -p ${{secrets.NAME_REPO_GIT}}/reports
-          cp -R ${{github.workspace}}/reports ${{secrets.NAME_REPO_GIT}}/reports
-          cd ${{secrets.NAME_REPO_GIT}}
-          git add .
-          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
-          git push
 
       # SQL MAP
       - name: Prepare environment
         run: |
           echo "START_DATE=$(date +'%d-%m-%YT%H-%M-%S-%Z')" >> $GITHUB_ENV
           echo "START_TIMESTAMP=$(date +'%s')" >> $GITHUB_ENV
-          TMP_TARGET="XXXXXXXXXX"
+          TMP_TARGET="https://tcc-password-manager.vercel.app/"
           echo "TARGET=$TMP_TARGET" >> $GITHUB_ENV
 
       - name: Checkout
