--- a/.github/workflows/01-build.yaml
+++ b/.github/workflows/01-build.yaml
@@ -143,15 +143,15 @@ jobs:
           target: 'https://tcc-password-manager.vercel.app/'
           cmd_options: '-a' #indica ataque ativo, onde o zap tenta atuar como um atacante em busca de vulnerabilidades
 
-      - name: Copy report to directory
-        run: |
-          mkdir -p ${{ github.workspace }}/reports
-          cp -r /zap/wrk/* ${{ github.workspace }}/reports
+      # - name: Copy report to directory
+      #   run: |
+      #     mkdir -p ${{ github.workspace }}/reports
+      #     cp -r /zap/wrk/* ${{ github.workspace }}/reports
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          name: zap-reports
+          name: zap_scan
           path: ${{ github.workspace }}/reports
 
       - name: Save Results
