#6 fix: add zap_reports
Co-authored-by: nYCSTs <lucascandradex@protonmail.com>

--- a/.github/workflows/01-build.yaml
+++ b/.github/workflows/01-build.yaml
@@ -154,6 +154,7 @@ jobs:
           mkdir -p ${{secrets.NAME_REPO_GIT}}/reports
           cp -R ${{github.workspace}}/reports ${{secrets.NAME_REPO_GIT}}/reports
           cd ${{secrets.NAME_REPO_GIT}}
+          git checkout main
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
           git push
