--- a/.github/workflows/01-build.yaml
+++ b/.github/workflows/01-build.yaml
@@ -135,30 +135,30 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       
-      - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.12.0
-        with:
-          token: ${{ secrets.TOKEN_GIT }}
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://tcc-password-manager.vercel.app/'
-          cmd_options: '-a' #indica ataque ativo, onde o zap tenta atuar como um atacante em busca de vulnerabilidades
+      # - name: ZAP Scan
+      #   uses: zaproxy/action-baseline@v0.12.0
+      #   with:
+      #     token: ${{ secrets.TOKEN_GIT }}
+      #     docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+      #     target: 'https://tcc-password-manager.vercel.app/'
+      #     cmd_options: '-a' #indica ataque ativo, onde o zap tenta atuar como um atacante em busca de vulnerabilidades
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: zap_scan
-          path: ${{ github.workspace }}/reports
+      # - name: Upload artifact
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: zap_scan
+      #     path: ${{ github.workspace }}/reports
 
-      - name: Save Results
-        run: |
-          git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
-          mkdir -p ${{secrets.NAME_REPO_GIT}}/reports
-          cp -R ${{github.workspace}}/reports ${{secrets.NAME_REPO_GIT}}/reports
-          cd ${{secrets.NAME_REPO_GIT}}
-          git checkout main
-          git add .
-          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
-          git push
+      # - name: Save Results
+      #   run: |
+      #     git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
+      #     mkdir -p ${{secrets.NAME_REPO_GIT}}/reports
+      #     cp -R ${{github.workspace}}/reports ${{secrets.NAME_REPO_GIT}}/reports
+      #     cd ${{secrets.NAME_REPO_GIT}}
+      #     git checkout main
+      #     git add .
+      #     git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
+      #     git push
 
       # SQL MAP
       - name: Prepare environment
@@ -201,14 +201,7 @@ jobs:
           mkdir -p ${{secrets.NAME_REPO_GIT}}/reports
           cp -R ${{github.workspace}}/reports ${{secrets.NAME_REPO_GIT}}/reports
           cd ${{secrets.NAME_REPO_GIT}}
+          git checkout main
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
           git push
-
-      # SQL MAP
-      - name: Prepare environment
-        run: |
-          echo "START_DATE=$(date +'%d-%m-%YT%H-%M-%S-%Z')" >> $GITHUB_ENV
-          echo "START_TIMESTAMP=$(date +'%s')" >> $GITHUB_ENV
-          TMP_TARGET="https://tcc-password-manager.vercel.app/"
-          echo "TARGET=$TMP_TARGET" >> $GITHUB_ENV
