--- a/.github/workflows/02-deploy.yaml
+++ b/.github/workflows/02-deploy.yaml
@@ -42,34 +42,34 @@ jobs:
         run: |
           vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
 
-     # ZAP (290 estrelas)
-      # - name: Checkout
-      #   uses: actions/checkout@v2
+     ZAP (290 estrelas)
+      - name: Checkout
+        uses: actions/checkout@v2
       
-      # - name: ZAP Scan
-      #   uses: zaproxy/action-baseline@v0.12.0
-      #   with:
-      #     token: ${{ secrets.TOKEN_GIT }}
-      #     docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-      #     target: 'https://tcc-password-manager.vercel.app/'
-      #     cmd_options: '-a' #indica ataque ativo, onde o zap tenta atuar como um atacante em busca de vulnerabilidades
+      - name: ZAP Scan
+        uses: zaproxy/action-baseline@v0.12.0
+        with:
+          token: ${{ secrets.TOKEN_GIT }}
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+          target: 'https://tcc-password-manager.vercel.app/'
+          cmd_options: '-a' #indica ataque ativo, onde o zap tenta atuar como um atacante em busca de vulnerabilidades
 
-      # - name: Upload artifact
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: zap_scan
-      #     path: ${{ github.workspace }}/reports
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap_scan
+          path: ${{ github.workspace }}/reports
 
-      # - name: Save Results
-      #   run: |
-      #     git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
-      #     mkdir -p ${{secrets.NAME_REPO_GIT}}/reports
-      #     cp -R ${{github.workspace}}/reports ${{secrets.NAME_REPO_GIT}}/reports
-      #     cd ${{secrets.NAME_REPO_GIT}}
-      #     git checkout main
-      #     git add .
-      #     git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
-      #     git push
+      - name: Save Results
+        run: |
+          git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
+          mkdir -p ${{secrets.NAME_REPO_GIT}}/reports
+          cp -R ${{github.workspace}}/reports ${{secrets.NAME_REPO_GIT}}/reports
+          cd ${{secrets.NAME_REPO_GIT}}
+          git checkout main
+          git add .
+          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
+          git push
 
       # SQL MAP
       - name: Prepare environment
@@ -94,7 +94,7 @@ jobs:
           author_name: GitHub Actions
           author_email: 41898282+github-actions[bot]@users.noreply.github.com
           message: "👷 chore(sqlmap): add report for ${{ env.TARGET }}-${{ env.START_DATE }}-${{ env.START_TIMESTAMP }}"
-          add: "./reports/web/*"
+          add: "./reports"
           pull: "--rebase --autostash"
 
       # - name: Checkout
