#6 fix: create build and deploy workflows
Co-authored-by: nYCSTs <lucascandradex@protonmail.com>

--- a/.github/workflows/02-cd.yaml
+++ b/.github/workflows/02-cd.yaml
@@ -42,7 +42,7 @@ jobs:
         run: |
           vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
 
-     ZAP (290 estrelas)
+     #ZAP (290 estrelas)
       - name: Checkout
         uses: actions/checkout@v2
       
